feat: create login page

--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -69,6 +69,11 @@ main {
         padding: 12px 24px;
         cursor: pointer;
 
+        &:disabled {
+          opacity: .4;
+          cursor: default;
+        }
+
         &.btn-primary {
           background-color: $primary;
           color: #FFF;
