--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,8 +2,28 @@
   title="Login into your account"
   primaryBtnText="Login now"
   secondaryBtnText="Signup now"
+  (submit)="submit()"
+  (navigate)="navigate()"
+  [disabledPrimaryBtn]="!loginForm.valid"
 >
   <form [formGroup]="loginForm">
-    <h2>Formulário</h2>
+    <app-primary-input
+      formControlName="email"
+      inputName="email"
+      type="email"
+      label="Email"
+      placeholder="johndoe@gmail.com"
+    >
+      <img src="/assets/svg/email-icon.svg" alt="Icon">
+    </app-primary-input>
+    <app-primary-input
+      formControlName="password"
+      inputName="password"
+      type="password"
+      label="Password"
+    >
+      <img src="/assets/svg/password-icon.svg" alt="Icon">
+    </app-primary-input>
+    <span>Forgot Password?</span>
   </form>
 </app-default-login-layout>
